<resources>
    <string name="app_name">Розробка мобільних застосувань</string>
    <string name="title_activity_currency_list">CurrencyListActivity</string>
    <string name="list_title">Валюти</string>
    <string name="title_cc">Скорочення</string>
    <string name="title_rate">Курс</string>
    <string name="title_full_name">Повна назва</string>
    <string name="title_r030">Код</string>
    <string name="title_date">Дата</string>
    <string name="currency">Валюта</string>
    <string name="rate">Курс</string>
    <string name="title_exchange_search">Шукати обмін валют неподалік</string>
    <string name="title_save">Додати в історію</string>
    <string name="title_show_history">Показати історію</string>
</resources>
