<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.osb.mobiledev.kpi.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp">

        <TextView
            android:id="@+id/textView_currency_title_label"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/currency" />

        <TextView
            android:id="@+id/textView_currency_rate_label"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/rate" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_currency_title_value"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView_currency_rate_value"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search_exchange"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/title_exchange_search" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/title_save" />

        <Button
            android:id="@+id/button_show_history"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/title_show_history" />

    </LinearLayout>

</LinearLayout>