<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    android:paddingEnd="2sp"
    android:paddingLeft="5sp"
    android:paddingRight="2sp"
    android:paddingStart="5sp"
    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_cc"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_rate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="14sp"
            />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_list_row_shortTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textview_list_row_rate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/title_full_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
            />
        <TextView
            android:id="@+id/textview_list_row_fullTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_r030"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
            />
        <TextView
            android:id="@+id/textview_list_row_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
            />
        <TextView
            android:id="@+id/textview_list_row_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp"
            />

    </LinearLayout>

</LinearLayout>